@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 09-01-2006 changed: edit xbe title truncates to 39 characters so as not to corrupt xbe header
+ - 09-01-2006 fixed: video stacking (no longer displays comma seperated file list)
  - 09-01-2006 fixed: [ 1398240 ] Dialog box grammar error.
  - 09-01-2006 changed: No TV mode in LCD doesn't auto-start in My Music anymore.
  - 08-01-2006 fixed: Default python values from references.xml were incorrect for skin version >= 1.85.
